# tcc

./: .dockerignore  .gitignore
charts/smarter-device-manager/: Chart.yaml  values.yaml
charts/smarter-device-manager/templates/: _helpers.tpl  configmap.yaml  daemonset.yaml  serviceaccount.yaml
charts/zipkin/: Chart.yaml  README.md  values.yaml
charts/zipkin/templates/: _helpers.tpl  daemonset.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
docs/anteprojeto/: bibliografia.bib  conclusao.tex  introducao.tex  main.tex  metodologia.tex  pretextual_pg.tex  pretextual_tcc.tex  proposta.tex  recursos.tex  referencial.tex  resultados.tex
docs/raspberry/: README.md
manifests/cassandra/: deployment.yaml  service.yaml
manifests/is-aruco-detector/: configmap.yaml  deployment.yaml
manifests/is-aruco-detector/default/: configmap.yaml  deployment.yaml
manifests/is-aruco-detector/edge/: configmap.yaml  deployment.yaml
manifests/is-calibration-server/: configmap.yaml  deployment.yaml
manifests/is-calibration-server/default/: configmap.yaml  deployment.yaml
manifests/is-calibration-server/edge/: configmap.yaml  deployment.yaml
manifests/is-camera/: configmap.yaml  deployment.yaml
manifests/is-mjpeg-server/: deployment.yaml  service.yaml
manifests/is-object-detector/default/: configmap.yaml  deployment.yaml
manifests/is-object-detector/edge/: configmap.yaml  deployment.yaml
manifests/is-robot/: configmap.yaml  deployment.yaml
manifests/rabbitmq/: configmap.yaml  deployment.yaml
manifests/rabbitmq/default/: configmap.yaml  service.yaml
manifests/rabbitmq/edge/: configmap.yaml  deployment.yaml  service.yaml
manifests/zipkin/: deployment.yaml
manifests/zipkin/default/: deployment.yaml  service.yaml
manifests/zipkin/edge/: deployment.yaml  service.yaml
src/is-aruco-detector/: README.md  pyproject.toml
src/is-aruco-detector/conf/: options.json
src/is-aruco-detector/docker/: Dockerfile  Dockerfile.dev
src/is-aruco-detector/is_aruco_detector/: aruco.py  calibration.py  channel.py  service.py
src/is-aruco-detector/is_aruco_detector/conf/: options.proto  options_pb2.py
src/is-aruco-detector/tests/: test_version.py
src/is-calibration-server/: README.md  pyproject.toml
src/is-calibration-server/conf/: options.json
src/is-calibration-server/docker/: Dockerfile  Dockerfile.dev
src/is-calibration-server/is_calibration_server/: calibration.py  service.py
src/is-calibration-server/is_calibration_server/conf/: options.proto  options_pb2.py
src/is-calibration-server/tests/: test_version.py
src/is-camera/: README.md  pyproject.toml
src/is-camera/conf/: camera_0.json  options.json
src/is-camera/docker/: Dockerfile  Dockerfile.dev
src/is-camera/is_camera/: driver.py  gateway.py  service.py
src/is-camera/is_camera/conf/: options.proto  options_pb2.py
src/is-camera/is_camera/driver/: base.py  opencv2.py
src/is-camera/k8s/: configmap.yaml  deployment.yaml
src/is-camera/tests/: test_version.py
src/is-controller/: README.md  pyproject.toml
src/is-controller/conf/: options.json
src/is-controller/docker/: Dockerfile
src/is-controller/is_controller/: operator.py
src/is-controller/is_controller/conf/: options.proto  options_pb2.py
src/is-controller/is_controller/utils/: options.py  rabbitmq.py  stats.py  zipkin.py
src/is-controller/resources/: cdr.yaml  is-controller.yaml  test.yaml
src/is-controller/tests/: test_version.py
src/is-object-detector/: pyproject.toml
src/is-object-detector/conf/: options.json
src/is-object-detector/docker/: Dockerfile
src/is-object-detector/is_object_detector/: channel.py  detector.py  service.py  utils.py  yolo.py
src/is-object-detector/is_object_detector/conf/: options.proto  options_pb2.py
src/is-rasp-camera/: README.md  pyproject.toml
src/is-rasp-camera/tests/: test_version.py
src/is-robot/: README.md  pyproject.toml
src/is-robot/conf/: options.json
src/is-robot/docker/: Dockerfile  Dockerfile.dev
src/is-robot/is_robot/: channel.py  robot.py  service.py
src/is-robot/is_robot/conf/: options.proto  options_pb2.py
src/is-robot/tests/: test_version.py
