[tool.poetry]
name = "is-aruco-detector"
version = "0.1.0"
description = ""
authors = ["Luiz Carlos Cosmi Filho <luizcarloscosmifilho@gmail.com>"]
readme = "README.md"
packages = [{include = "is_aruco_detector"}]

[tool.poetry.dependencies]
python = "^3.8"
pyturbojpeg = {git = "https://github.com/lilohuang/PyTurboJPEG.git"}
numpy = "1.22.4"
opencv-contrib-python = "4.7.0.68"
vine = "1.3.0"
is-wire = "1.2.0"
is-msgs = "1.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
