[tool.poetry]
name = "is-camera"
version = "0.2.0"
description = ""
authors = ["Luiz Carlos Cosmi Filho <luizcarloscosmifilho@gmail.com>"]
readme = "README.md"
packages = [{include = "is_camera"}]

[tool.poetry.dependencies]
python = "^3.8"
is-msgs = "1.1.10"
is-wire = "1.2.0"
vine = "1.3.0"
numpy = "1.22.4"
opencv-contrib-python = "4.7.0.68"
pyturbojpeg = {git = "https://github.com/lilohuang/PyTurboJPEG.git"}
opencensus-ext-zipkin = "0.2.1"
python-dateutil = "2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.poetry.scripts]
is-camera-gateway = 'is_camera.service:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

