[tool.poetry]
name = "is-rasp-camera"
version = "0.1.0"
description = ""
authors = ["Luiz Carlos Cosmi Filho <luizcarloscosmifilho@gmail.com>"]
readme = "README.md"
packages = [{include = "is_rasp_camera"}]

[tool.poetry.dependencies]
python = "^3.8"
is-msgs = "1.1.10"
is-wire = "1.2.0"
vine = "1.3.0"
numpy = "^1.24.2"
matplotlib = "^3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.poetry.scripts]
is-rasp-camera = 'is_rasp_camera.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

